# nat

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
docs/: SPEC.md
extension/: AGENTS.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
extension/e2e/: auth.spec.ts  chat.spec.ts  fixtures.ts  oauth-handoff.spec.ts  sidebar.spec.ts
extension/public/: manifest.json
infrastructure/: template.yaml
plans/: SAAS-ARCHITECTURE.md
site/: index.html  package-lock.json  package.json  privacy.html  success.html  terms.html  vite.config.ts
site/src/: main.ts  styles.css  success.ts
src/: __init__.py
src/nat/: __init__.py  agent.py  client.py  tools.py
tasks/nat-saas-mvp-mv1pk/: prd.json  progress.txt
tests/: conftest.py  test_metrics.py  test_nat_agent.py  test_nat_agent_streaming.py  test_nb_oauth_callback.py  test_nb_oauth_init.py  test_oauth_state.py  test_observability.py  test_prompt_caching.py  test_session_state.py  test_session_token.py  test_stripe_checkout.py  test_stripe_webhook.py  test_subscription_middleware.py  test_token_refresh.py  test_usage_tracking.py  test_validation.py
tests/integration/: __init__.py  test_nb_oauth_integration.py  test_stripe_webhook_integration.py  test_subscription_verification_integration.py  test_token_refresh_integration.py
tests/tools/: __init__.py  conftest.py  test_automations.py  test_contacts.py  test_donations.py  test_event_rsvps.py  test_events.py  (+9 more)
(+36 files in other folders)
