[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nat"
version = "0.1.0"
description = "Nat - NationBuilder AI Assistant"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "cfn-lint>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "claude_agent_sdk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
